# viewkit

./: .gitignore  claude.md  pyproject.toml  readme.md  requirements.txt  test.py  windows.py
docs/: coding_conventions.md
tests/: test_custom_shortcuts.py  test_feature.py  test_settings_manager.py  test_shortcut_settings.py  test_shortcut_validator.py
viewKit/: __init__.py  app.py  ctx.py  feature.py  mainwnd.py  menu.py
viewKit/context/: app.py  window.py
viewKit/creator/: __init__.py  viewCreator.py
viewKit/creator/objects/: button.py  checkbox.py  clearSlider.py  clear_slider.py  comboBoxBase.py  (+14 more)
viewKit/menu/: __init__.py  definition.py  menu.py  shortcut.py  str2key.py
viewKit/ref/: __init__.py  numbergen.py  ref.py
viewKit/shortcut/: __init__.py  translation.py
viewKit/viewCreator/: __init__.py  viewCreator.py
viewkit/: __init__.py  app.py  dialog.py  feature.py  fontManager.py  mainwnd.py  reload.py  subwnd.py  version.py
viewkit/config/: configObjFactory.py  customValidator.py  spec.py
viewkit/context/: __init__.py  app.py  message.py  window.py
viewkit/creator/: __init__.py  viewCreator.py  viewModeCalculator.py
viewkit/feature/: __init__.py  feature.py
viewkit/menu/: __init__.py  definition.py  menu.py
viewkit/presets/: __init__.py  exceptionDialog.py  keyValueSetting.py  langDialog.py  shortcutKeySetting.py  versionInfoDialog.py
viewkit/ref/: numbergen.py  ref.py
viewkit/settings/: __init__.py  settingsManager.py
viewkit/shortcut/: __init__.py  str2key.py  translation.py  validation.py
viewkit/views/: langDialog.py
(+27 files in other folders)
