[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viewkit"
version = "0.1.0"
description = "ACT Laboratory's base GUI infrastructure"
authors = [
    { name = "ACT Laboratory", email = "support@actlab.org" }
]
dependencies = [
    "wxpython==4.2.2",
    "pywin32",
    "winpaths",
    "pyinstaller==6.11.0",
    "pillow==9.5"
]
requires-python = ">=3.8,<3.13"

[tool.setuptools]
packages = ["viewkit", "viewkit.creator", "viewkit.creator.objects"]

[tool.autopep8]
aggressive = 2
ignore = ["E402", "E721"]
max-line-length = 150
in-place = true
recursive = true
exclude = "venv"

[project.urls]
Homepage = "https://github.com/actlaboratory/viewKit"
Repository = "https://github.com/actlaboratory/viewKit"
